fixed line spacing

--- a/themes/freemind386a/source/css/style.css
+++ b/themes/freemind386a/source/css/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 .page, .post {
-    line-height: 16px;
+    line-height: 18px;
     font-family: IBMVGA8,monospace;
 }
 
